--- a/index.html
+++ b/index.html
@@ -2,31 +2,50 @@
 <html lang="en">
 
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="./style.css" rel="stylesheet">
   <title>Bootstrap 5 Vertical Carousel</title>
+  <link rel="icon" type="image/x-icon" href="./images/bootstrap.ico">
 </head>
 
 <body>
+  <!-- Toast notification https://getbootstrap.com/docs/5.1/components/toasts/ -->
+  <div aria-live="polite" aria-atomic="true">
+    <div class="toast-container position-absolute top-0 start-0 mt-2 ms-2" style="z-index: 99;">
+      <!-- data-bs-delay: Wait time in ms before toast auto hides -->
+      <div id="infoToast" class="toast align-items-center text-white bg-primary border-0 " data-bs-delay="10000"
+        role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+          <div class="toast-body">
+            Carousel slides can be cycled using mouse wheel or touch screen movements.
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+            aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container">
+    <!-- Carousel https://getbootstrap.com/docs/5.1/components/carousel/ -->
     <div class="carousel-container justify-content-center">
-      <!-- https://getbootstrap.com/docs/5.1/components/carousel/ -->
       <!-- data-bs-interval: the amount of time to delay between automatically cycling an item. If false, carousel will not automatically cycle -->
       <!-- data-bs wrap: whether the carousel should cycle continuously (i.e go from first to last and vice-versa) -->
       <div id="vertical-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false"
         data-bs-wrap="true">
-
+        <!-- Carousel slide indicators -->
         <ol class="carousel-indicators">
           <li data-bs-target="#vertical-carousel" data-bs-slide-to="0" class="active"></li>
           <li data-bs-target="#vertical-carousel" data-bs-slide-to="1"></li>
           <li data-bs-target="#vertical-carousel" data-bs-slide-to="2"></li>
           <li data-bs-target="#vertical-carousel" data-bs-slide-to="3"></li>
         </ol>
-
         <div class="carousel-inner">
+          <!-- Carousel item represents each slide -->
           <div class="carousel-item active" style="background-image:url(./images/night.jpg);">
             <div class="container">
               <div class="row align-items-center" style="height: 100%">
@@ -44,7 +63,7 @@
           </div>
         </div>
       </div>
-
+      <!-- Carousel buttons -->
       <button class="carousel-control-prev" type="button" data-bs-target="#vertical-carousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -55,9 +74,10 @@
       </button>
     </div>
   </div>
-
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
