update carousel properties

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <div class="carousel-container justify-content-center">
       <!-- data-bs-interval: the amount of time to delay between automatically cycling an item. If false, carousel will not automatically cycle -->
       <!-- data-bs wrap: whether the carousel should cycle continuously (i.e go from first to last and vice-versa) -->
-      <div id="vertical-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1500"
-        data-bs-wrap="true">
+      <div id="vertical-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false"
+        data-bs-wrap="false">
         <!-- Carousel slide indicators -->
         <ol class="carousel-indicators">
           <li data-bs-target="#vertical-carousel" data-bs-slide-to="0" class="active"></li>
