--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div aria-live="polite" aria-atomic="true">
     <div class="toast-container position-absolute top-0 start-0 mt-2 ms-2" style="z-index: 99;">
       <!-- data-bs-delay: Wait time in ms before toast auto hides -->
-      <div id="infoToast" class="toast align-items-center text-white bg-primary border-0 " data-bs-delay="10000"
+      <div id="infoToast" class="toast align-items-center text-white bg-primary border-0 " data-bs-delay="5000"
         role="alert" aria-live="assertive" aria-atomic="true">
         <div class="d-flex">
           <div class="toast-body">
@@ -37,7 +37,7 @@
       <!-- data-bs-interval: the amount of time to delay between automatically cycling an item. If false, carousel will not automatically cycle -->
       <!-- data-bs wrap: whether the carousel should cycle continuously (i.e go from first to last and vice-versa) -->
       <div id="vertical-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false"
-        data-bs-wrap="false">
+        data-bs-wrap="true">
         <!-- Carousel slide indicators -->
         <ol class="carousel-indicators">
           <li data-bs-target="#vertical-carousel" data-bs-slide-to="0" class="active"></li>
