--- a/index.html
+++ b/index.html
@@ -65,16 +65,20 @@
         </div>
       </div>
       <!-- Carousel buttons -->
-      <button class="unclickable carousel-control-prev" type="button" data-bs-target="#vertical-carousel" data-bs-slide="prev">
+      <button class="unclickable carousel-control-prev" type="button" data-bs-target="#vertical-carousel"
+        data-bs-slide="prev">
         <span class="clickable carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="unclickable carousel-control-next" type="button" data-bs-target="#vertical-carousel" data-bs-slide="next">
+      <button class="unclickable carousel-control-next" type="button" data-bs-target="#vertical-carousel"
+        data-bs-slide="next">
         <span class="clickable carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
   </div>
+  <a target="_blank" href="https://github.com/luvaihassanali/bootstrap-5-vertical-carousel"
+    class="btn btn-outline-dark btn-style roll-in-blurred-right" role="button"></a>
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
