--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
   </div>
   <a target="_blank" href="https://github.com/luvaihassanali/bootstrap-5-vertical-carousel"
-    class="btn btn-outline-dark btn-style roll-in-blurred-right" role="button"></a>
+    class="btn btn-outline-dark btn-style" id="gitBtn" role="button"></a>
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
