--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
             </div>
           </div>
           <div class="carousel-item" style="background-image:url(./images/flowers.jpg);">
+		    <!-- Use img class when no content and size needs to be specified -->
+		    <!-- <img src="./images/flowers.jpg" style="width:100%;max-width:800px"> -->
           </div>
           <div class="carousel-item" style="background-image:url(./images/lions.jpg);">
           </div>
