--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   <link href="./style.css" rel="stylesheet">
   <title>Bootstrap 5 Vertical Carousel</title>
   <link rel="icon" type="image/x-icon" href="./images/bootstrap.ico">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EL36LEQXYG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EL36LEQXYG');
+  </script>
 </head>
 
 <body>
